# pencil-receiver

./: README.md  pyproject.toml  pyrightconfig.json
assets/html/: index.html
src/: app.py  mouse.py  server.py
src/webrtc/: message.py  mouse.py  observer.py  router.py
src/webrtc/controllers/: __init__.py  controller.py  down_controller.py  draw_controller.py  route.py  up_controller.py
src/webrtc/messages/: message.py
src/webrtc/messages/incoming/: coords.py  down.py
