[project]
name = "pencil-server"
version = "0.1.0"
description = "Use this project to move mouse"
authors = [
    {name = "Erick Tucto",email = "erick@ericktucto.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pynput (>=1.8.1,<2.0.0)",
    "mouse (>=0.7.1,<0.8.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "wayland-automation (>=0.2.7,<0.3.0)",
    "evdev (>=1.9.3,<2.0.0)",
    "aiortc (>=1.14.0,<2.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
